# nakama

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTENT-PIPELINE.md  CONTEXT-MAP.md  Enakama.claudeworktreesfranky-s3.pr491.diff  NOTICE  README.md  config.yaml  cron.conf  eslint.config.mjs  nakama-usopp.service  nakama-web.service  package.json  pyproject.toml  requirements.txt  thousand-sunny.service
.claude/: settings.json
.github/scripts/: lint_commit_title.py
.github/workflows/: ci-skip.yml  ci.yml  conventional-commits-lint.yml  external-probe.yml
agents/: base.py
agents/brook/: README.md  __main__.py  audit_runner.py  blog_renderer.py  compliance_scan.py  compose.py  context_bridge.py  fb_renderer.py  ig_renderer.py  line1_extractor.py  line1b_extractor.py  line1b_renderer_adapter.py  repurpose_engine.py  seo_block.py  seo_narrow.py  style_profile_loader.py
agents/franky/: README.md  __main__.py  agent.py  alert_router.py  anomaly_daemon.py  cron_dispatcher.py  health_check.py  news_digest.py  news_retrospective.py  news_synthesis.py  r2_backup_verify.py  reporter.py  slack_bot.py  weekly_digest.py
agents/nami/: README.md  __main__.py
agents/robin/: CONTEXT.md  README.md  __main__.py  agent.py  annotation_merger.py  annotation_weave.py  book_digest_writer.py  book_notes_writer.py  categories.py  chunker.py  image_fetcher.py  inbox_writer.py  ingest.py  kb_search.py  pubmed_digest.py  pubmed_fulltext.py  pubmed_html.py  reading_context_package.py  style_extractor.py  url_dispatcher.py  web.py  zotero_assets.py  zotero_ingest.py  zotero_reader.py  zotero_sync.py
agents/sanji/: README.md  __main__.py
agents/usopp/: README.md  __main__.py  publisher.py
agents/zoro/: README.md  __main__.py  autocomplete.py  brainstorm_scout.py  keyword_research.py  reddit_api.py  report_renderer.py  trends_api.py  twitter_api.py  youtube_api.py
config/: ai_news_sources.yaml  franky-watch-mempalace.yaml  journal_blocklist.yaml  pubmed_feeds.yaml  seo-enrich.yaml  tag-whitelist.yaml  target-keywords.yaml  zoro-watch-mempalace.yaml
config/style-profiles/: book-review.yaml  fb-post.yaml  ig-carousel.yaml  people.yaml  science.yaml
docs/: design-brief.md  design-system.md  memory-system.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/capabilities/: approval-queue.md  kb-search.md  (+9 more)
gateway/: __init__.py  __main__.py  bot.py  conversation_state.py  formatters.py  orchestrator.py  router.py
memory/: SCHEMA.md  franky.md  robin.md  shared.md
migrations/: 002_publish_jobs.sql  003_franky_tables.down.sql  003_franky_tables.sql  004_r2_backup_checks.down.sql  004_r2_backup_checks.sql  005_gsc_rows.sql  006_audit_results.sql  007_keyword_research_runs.sql  008_r2_backup_checks_prefix.down.sql  008_r2_backup_checks_prefix.sql  009_books.sql  010_book_progress.sql  011_book_ingest_queue.sql  012_kb_hybrid.sql  013_kb_search_feedback.sql  014_proposal_metrics.down.sql  014_proposal_metrics.sql  015_news_score_shadow.sql  016_book_mode.sql  017_drop_brook_conversation_tables.down.sql  017_drop_brook_conversation_tables.sql
public/: options.css  options.html  popup.css
qa/: findings-ebook.md  findings.md  seed_ebooks.py
scripts/: Invoke-IngestTextbook.ps1  ab_ingest_bench.py  adr_blocker_verification.py  adr_multi_model_review.py  align_srt.py  analyze_qwen_srt.py  analyze_srt_cuts.py  backup_nakama_state.py  bench_kb_search.py  brook_posts_inventory.py  check_critical_path_coverage.py  cleanup_broken_definition_seeds.py  cleanup_c5_stubs.py  cleanup_logs.py  cleanup_sn_c5_stubs.py  compare_srt.py  debug_auphonic.py  debug_auphonic_download.py  dispatch_gemini_panel.py  dispatch_gemini_signoff.py  eval_bse_kb_search.py  eval_bse_vault_health.py  google_calendar_auth.py  google_gmail_auth.py  iter4_1_test.py  iter4_2_test.py  iter4_compare.py  iter4_test.py  iter_test.py  migrate_annotations_v3.py  migrate_broken_concept_frontmatter.py  mirror_backup_to_secondary.py  panel_gemini_adr021.py  panel_gemini_adr024.py  patch_bse_staging_metadata.py  promote_acsm_to_live.py  promote_mep_to_live.py  promote_sn_to_live.py  prune_old_memories.py  release.py  (+17 more)
shared/: agent_memory.py  alerts.py  annotation_store.py  anomaly.py  anthropic_client.py  approval_queue.py  audio_clip.py  audit_results_store.py  auphonic.py  blob_loader.py  book_queue.py  book_storage.py  brook_synthesize_store.py  chunker.py  claude_cli_client.py  concept_canonicalize.py  concept_classifier.py  concept_dispatch.py  concept_promotion_engine.py  concept_schema.py  concept_validators.py  config.py  coverage_classifier.py  discard_service.py  doc_index.py  dry_run_extractor.py  dry_run_matcher.py  epub_metadata.py  epub_sanitizer.py  events.py  figure_triage.py  firecrawl_search.py  firecrawl_serp.py  gemini_client.py  google_calendar.py  google_gmail.py  gsc_client.py  gsc_rows_store.py  gutenberg_builder.py  gutenberg_validator.py  (+68 more)
tests/: conftest.py  test_agent_memory.py  test_annotation_schema.py  test_annotation_store.py  test_anthropic_auth_dispatch.py  test_anthropic_client_auth.py  test_anthropic_client_guard.py  test_approval_queue.py  test_audio_clip.py  test_auphonic.py  test_auth_router.py  test_brainstorm_scout.py  test_bridge_router.py  test_bridge_seo.py  test_bridge_seo_audit_history.py  test_bridge_seo_audits.py  test_bridge_seo_export.py  test_bridge_seo_review.py  test_bridge_zoro.py  test_brook_router.py  test_chunker.py  test_config.py  test_conversation_state.py  test_cost_tracking.py  test_dotenv_empty_string_trap.py  test_gateway_bot.py  test_gateway_handlers.py  test_gateway_router.py  test_gemini_client.py  test_google_calendar.py  test_google_gmail.py  test_gutenberg_builder.py  test_kb_schemas.py  test_kb_writer.py  test_lifeos_writer.py  test_llm_facade.py  test_llm_observability.py  test_llm_router.py  test_local_llm.py  test_log.py  (+37 more)
thousand_sunny/: __init__.py  app.py  auth.py  helpers.py  promotion_wiring.py
video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
(+1284 files in other folders)
