[project]
name = "nakama"
version = "0.4.1"
description = "AI Agent team for Health & Wellness / Longevity content creators"
requires-python = ">=3.11"
authors = [
    { name = "shosho-chang" },
]

dependencies = [
    # Core
    "anthropic>=0.42.0",
    "google-genai>=1.73",              # Gemini 2.5 Pro audio 仲裁（多模態）
    "pydantic>=2.0",                   # 結構化輸出 schema
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Web & API
    "httpx>=0.27.0",
    "feedparser>=6.0",
    "trafilatura>=2.0.0",        # Web scraping：主要內容提取（本地、CJK 友好）
    "readability-lxml>=0.8.4",   # Web scraping：備選去噪方案
    "firecrawl-py>=4.22.0",      # Web scraping：JS 渲染 / SPA fallback（已在 requirements.txt）

    # Transcription (post-processing)
    "opencc-python-reimplemented>=0.1.7",
    "pypinyin>=0.51",

    # PDF parsing
    "pymupdf4llm>=1.27",
    "pdfplumber>=0.11",          # 精確表格提取（研究論文/教科書 with_tables=True）

    # Utilities
    "python-dateutil>=2.9",
    "psutil>=5.9.0",

    # Web UI (Thousand Sunny)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",

    # Slack Gateway
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",

    # Nami: Google Calendar
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
transcription = [
    # FunASR: 本地 ASR 引擎（需要 GPU 環境）
    # 安裝方式：pip install funasr torch torchaudio
    "funasr>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "shared*", "thousand_sunny*", "gateway*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "real_extractor: run the real memory_extractor (bypass conftest auto-mock)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
