[project]
name = "nakama"
version = "0.4.1"
description = "AI Agent team for Health & Wellness / Longevity content creators"
requires-python = ">=3.11"
authors = [
    { name = "shosho-chang" },
]

dependencies = [
    # Core
    "anthropic>=0.42.0",
    "openai>=1.50.0",                  # xAI Grok 走 OpenAI-compatible endpoint
    "google-genai>=1.73",              # Gemini 2.5 Pro audio 仲裁（多模態）
    "pydantic>=2.0",                   # 結構化輸出 schema
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Web & API
    "httpx>=0.27.0",
    "feedparser>=6.0",
    "trafilatura>=2.0.0",        # Web scraping：主要內容提取（本地、CJK 友好）
    "readability-lxml>=0.8.4",   # Web scraping：備選去噪方案
    "firecrawl-py>=4.22.0",      # Web scraping：JS 渲染 / SPA fallback（已在 requirements.txt）

    # Transcription (post-processing)
    "opencc-python-reimplemented>=0.1.7",
    "pypinyin>=0.51",
    "jieba>=0.42",

    # PDF parsing
    "pymupdf4llm>=1.27",
    "pdfplumber>=0.11",          # 精確表格提取（研究論文/教科書 with_tables=True）

    # EPUB parsing (textbook-ingest skill — ebook-format primary path per ADR-010)
    "ebooklib>=0.18",            # EPUB structural reader (spine + TOC + metadata)
    "beautifulsoup4>=4.12",      # EPUB HTML → plain text + heading extraction
    "markdownify>=1.2",          # HTML → Markdown (ADR-020 Phase 0 raw converter)

    # KB hybrid retrieval (issue #431)
    "sqlite-vec>=0.1.9",   # vec0 virtual table for dense-vector lane
    "model2vec>=0.8.0",    # potion-base-8M 256-dim static embeddings
    "FlagEmbedding>=1.4.0", # BGE-M3 1024-dim default backend (ADR-022); ~2.3GB model on first use

    # Utilities
    "python-dateutil>=2.9",
    "psutil>=5.9.0",
    "boto3>=1.34.0",            # Franky: R2 (S3-compatible) backup verification

    # Web UI (Thousand Sunny)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",

    # Slack Gateway
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",

    # Nami: Google Calendar
    "google-api-python-client>=2.100.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.2.0",
    "filelock>=3.13.0",

    # Zoro: Google Trends (PR #107 brainstorm scout primary source)
    "trendspy>=0.1.6",

    # Script-Driven Video (ADR-015): clap-marker detection audio processing
    "scipy>=1.11",
]

[project.optional-dependencies]
transcription = [
    # WhisperX: Whisper Large V3 ASR + word-level alignment + (optional) speaker
    # diarization via pyannote.audio
    # 詳見 ADR-013-transcribe-engine-reconsideration.md（含 2026-05-01 diarization 反轉）
    # 安裝方式（GPU + CUDA 12.8）：
    #   pip install whisperx pyannote.audio
    #   pip install torch torchaudio torchvision --index-url https://download.pytorch.org/whl/cu128
    # diarization 需 HUGGINGFACE_TOKEN env + pyannote/speaker-diarization-3.1 EULA accept
    "whisperx>=3.8",
    "pyannote.audio>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",                 # Phase 6: critical-path coverage gate
    "hypothesis>=6.100",               # Phase 6 Slice 2: FSM property-based testing
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "shared*", "thousand_sunny*", "gateway*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "real_extractor: run the real memory_extractor (bypass conftest auto-mock)",
    "real_slack: send real Slack DM via FrankySlackBot.from_env (bypass conftest auto-mock)",
    "live_wp: run against local Docker WP staging (requires PYTEST_WP_BASE_URL + WP_SHOSHO_* env vars)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

# Coverage 設定（Phase 6 Slice 1）
# 預設不在 pytest 加 --cov（避免本地 dev 變慢 ~30%）；CI 額外開
# 量法：pytest --cov=shared --cov=thousand_sunny --cov=agents --cov-report=term-missing
[tool.coverage.run]
source = ["shared", "thousand_sunny", "agents"]
branch = false
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
precision = 2
